debhelper (7.4.12) UNRELEASED; urgency=low

  * dh_bugfiles: Doc typo. Closes: #563269
  * makefile: Support the (asking for trouble) case of MAKE being set to
    something with a space in it. Closes: #563557

 -- Joey Hess <joeyh@debian.org>  Fri, 01 Jan 2010 13:00:22 -0500

debhelper (7.4.11) unstable; urgency=low

  * dh(1): Minor rewording of documentation of override commands.
    Closes: #560421
  * dh(1): Add an example of using an override target to avoid
    dh running several commands. Closes: #560600
  * dh_installman: Avoid doubled slashes in path. Closes: #561275
  * dh_installxfonts: Use new update-fonts-alias --include and
    --exclude options to better handle removal in the case where
    xfonts-utils is removed before a font package is purged.
    (#543512; thanks, Theppitak Karoonboonyanan)
  * dh: Optimise handling of noop overrides, avoiding an unnecessary
    call to make to handle them. (Modestas Vainius)

 -- Joey Hess <joeyh@debian.org>  Thu, 31 Dec 2009 11:32:34 -0500

debhelper (7.4.10) unstable; urgency=low

  * Add --parallel option that can be used to enable parallel building
    without limiting the max number of parallel jobs. (Modestas Vainius)
  * dh_makeshlibs: Temporarily revert fix for #557603, as it caused
    dpkg-gensymbols to see libraries not in the regular search path and
    broke builds. This will be re-enabled in v8. Closes: #560217

 -- Joey Hess <joeyh@debian.org>  Wed, 09 Dec 2009 15:17:19 -0500

debhelper (7.4.9) unstable; urgency=low

  * Typo. Closes: #558654
  * dh_installinit: Fix installation of defaults file when an upstart job is
    installed. Closes: #558782

 -- Joey Hess <joeyh@debian.org>  Mon, 30 Nov 2009 14:21:10 -0500

debhelper (7.4.8) unstable; urgency=low

  * Parallel building support is no longer enabled by default. It can still
    be enabled by using the --max-parallel option. This was necessary because
    some buildds build with -j2 by default. (See #532805)