@@ -3,6 +3,7 @@ debhelper (7.4.12) UNRELEASED; urgency=low
   * dh_bugfiles: Doc typo. Closes: #563269
   * makefile: Support the (asking for trouble) case of MAKE being set to
     something with a space in it. Closes: #563557
+  * Fix warning about unknown options passed to commands in override targets.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 01 Jan 2010 13:00:22 -0500
 
